# smart-timed-plug

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  avr.c  avr.h  button.c  button.h  eeprom.hex  main.c  oled.c  oled.h  oled_bitmap.c  oled_bitmap.h  oled_conf.h  time.c  time.h
eagle/: smart-timed-plug.sch
test/: avr_mock.c  avr_mock.h  button_mock.c  button_tc.c  data_generator.c  framework.c  framework.h  mock.c  mock.h  oled-all-test_tc.c  oled_common.c  oled_common.h  oled_tc.c  time_mock.c  time_tc.c
